apps/base/chatgpt-next-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatgpt-next-web
  labels:
    name: chatgpt-next-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatgpt-next-web
  template:
    metadata:
      labels:
        app: chatgpt-next-web
    spec:
      containers:
      - image: yidadaa/chatgpt-next-web
        imagePullPolicy: IfNotPresent
        name: chatgpt-next-web
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 3000
      restartPolicy: Always
