apps/base/chatgpt-next-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: chatgpt-next-web
  name: chatgpt-next-web
spec:
  ingressClassName: nginx
  rules:
    - host: chatgpt.example.com
      http:
        paths:
          - backend:
              service:
                name: chatgpt-next-web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - chatgpt.example.com
      secretName: chatgpt-next-web-tls
